--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% block title %}The Grand Locus | Genome Architecture Lab{% endblock %}
-{% block head %}<var id="section">#thelab</var>{% endblock %}
+{% extends "lab.html" %}
 {% block body %}
   <br/>
   <br/>
@@ -10,6 +8,4 @@
   The site is under construction.
 
   <div id="bottom_space"></div>
-
-
 {% endblock %}
