Added protocol for BPYE and implemented XHTML for hRecipe.

--- a/content/protocols/Ecoli-heat-shock-competent-cells-preparation.html
+++ b/content/protocols/Ecoli-heat-shock-competent-cells-preparation.html
@@ -2,20 +2,22 @@
 {% block body %}
 <br/>
 <br/>
-<h2><i>E. coli</i> heat-shock competent cells preparation</h2>
+
+<div class="hrecipe">
+<h2 class="fn"><i>E. coli</i> heat-shock competent cells preparation</h2>
 
 <p>Used for <a href="Ecoli-heat-shock-transformation.html">heat-shock transformation</a>.</p>
 
 <h3>Material:</h3>
 <ul>
-<li><i>E. coli </i>strain</li>
-<li>LB medium</li>
-<li>0.1 M CaCl<sub>2</sub> solution (ice cold)</li>
-<li>LB plates with proper antibiotic</li>
-<li>0.1 M CaCl<sub>2</sub> solution containing 15% glycerol (ice cold)</li>
+  <li class="ingredient"><i>E. coli </i>strain</li>
+  <li class="ingredient">LB medium</li>
+  <li class="ingredient">0.1 M CaCl<sub>2</sub> solution (ice cold)</li>
+  <li class="ingredient">LB plates with proper antibiotic</li>
+  <li class="ingredient">0.1 M CaCl<sub>2</sub> solution containing 15% glycerol (ice cold)</li>
 </ul>
 
-<h3>Procedure:</h3>
+<h3 class="instructions">Procedure:</h3>
 <div class="out_part">
 <h4>The day before</h4>
 <ol>
@@ -39,5 +41,6 @@
 </ol>
 
 <span id="version">- version 0.5 -</span>
+</div><!-- end hrecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
