--- a/content/protocols/BPYE-medium.html
+++ b/content/protocols/BPYE-medium.html
@@ -57,7 +57,7 @@ Kc167 cells.</p>
   <li>Shake well, and adjust volume to 5 L.</li>
   <li>Mount the Steritop and Stericup system under flow hood to reduce the risk of contamination.</li>
   <li>Void-filter the medium through the Steritop and Stericup system and store the medium at 4&deg;C.</li>
-  <li><strong>Before use</strong>, add 50 mL heat-inactivated FBS to 500 mL BPYE meduim.<br/>
+  <li><strong>Before use</strong>, add 50 mL heat-inactivated FBS to 500 mL BPYE medium.<br/>
 </ol>
 
 <div class="out_part">
