--- a/content/protocols/list.html
+++ b/content/protocols/list.html
@@ -16,6 +16,7 @@
 coli</i> heat-shock competent cells preparation</a></li>
   <li><a href="Ecoli-heat-shock-transformation.html"><i>E.
 coli</i> heat-shock transformation protocol</a></li>
+  <li><a href="Qiagen-maxi.html">Modified Qiagen maxi-prep protocol</a></li>
 </ul>
 <h2>Cell culture</h2>
 <ul>
