Removed the duration tags because they were misused.

--- a/content/protocols/Ecoli-heat-shock-transformation.html
+++ b/content/protocols/Ecoli-heat-shock-transformation.html
@@ -22,13 +22,13 @@
   <li>Take competent cells from -80&deg;C freezer and thaw them on ice.</li>
   <li>Pipette 10 ng (3-5 &mu;L) of DNA plasmid into competent cells while competent cells are starting to melt.</li>
   <li>Keep cells with transformed DNA plasmids on ice
-  for<span class="duration"><span class="value-title" title="PT5M"> </span>5 minutes</span>.</li>
+  for 5 minutes.</li>
   <li>Heat-shock cells at 42&deg;C
-  for<span class="duration"><span class="value-title" title="PT45S"> </span>45 seconds</span>.</li>
+  for 45 seconds.</li>
   <li>Keep cells on ice again
-  for<span class="duration"><span class="value-title" title="PT5M"> </span>2 minutes</span>.</li>
+  for 2 minutes.</li>
   <li>Spread totally 50 &mu;L cells with transformed DNA plasmids on a LB plate with proper antibiotic.</li>
-  <li>Keep LB plates at 37&deg;C and pick colonies after <span class="duration">more than 12 hours</span> incubation.</li>
+  <li>Keep LB plates at 37&deg;C and pick colonies after more than 12 hours incubation.</li>
 </ol>
 
 <span id="version">- version 0.5 -</span>
