--- a/content/protocols/Qiagen-maxi.html
+++ b/content/protocols/Qiagen-maxi.html
@@ -58,23 +58,18 @@ for high copy number plasmid.</p>
     buffer P2, heat the bottle in an incubator or in water bath until it
     disappears</span>.</li>
   <li>Seperate culture into two 50 mL Falcon tubes and centrifuge at 4000 rpm
-    for<span class="duration"><span class="value-title" title="PT10M">
-    </span>10 minutes</span>.</li>
+    for 10 minutes.</li>
     at 4&deg;C.<br/>
   <li>Resuspend the bacterial pellet with 10 mL buffer P1 containing RNase
     A and LyseBlue.</li>
   <li>Add 10 mL buffer P2, mix by inverting the tube until uniformly blue
     and leave at room temperature
-    for<span class="duration"><span class="value-title" title="PT5M">
-    </span>5 minutes</span>.</li>
+    for 5 minutes.</li>
   <li>Add 10 mL chilled buffer P3, mix by vigorously inverting until blue
     color disappears, and place the tube on ice
-    for<span class="duration"><span class="value-title" title="PT20M">
-    </span>20 min</span>.</li>
+    for 20 minutes.</li>
   <li>Centrifuge the Falcon tubes at <span class="optimized">4000 rpm
-    for<span class="duration"><span class="value-title" title="PT5M">
-    </span>10 minutes</span>
-    at 4&deg;C</span>.</li>
+    for 10 minutes at 4&deg;C</span>.</li>
   <li>Meanwhile, equilibrate the Qiagen column by washing with 10 mL
     buffer QBT.</li>
   <li>Carefully decant the liquid phase into the column. Some white
@@ -84,13 +79,10 @@ for high copy number plasmid.</p>
     Falcon tube</span>.</li>
   <li>Precipitate DNA by adding 10.5 mL room-temperature isopropanol to
     the eluate. Mix and centrifuge at <span class="optimized">4000 rpm
-    for<span class="duration"><span class="value-title" title="PT30M">
-    </span>30 minutes</span>
-    at 4&deg;C</span>.</li>
+    for 30 minutes at 4&deg;C</span>.</li>
   <li>Wash DNA pellet with 5 mL of room-temperature 70% ethanol, and
     centrifuge at <span class="optimized">4000 rpm
-    for<span class="duration"><span class="value-title" title="PT15M">
-    </span>15 minuntes</span></span>.</li>
+    for 15 minuntes</span>.</li>
   <li>Spill the liquid. The pellet should form a visible white ring at
     the bottom of the tube.</li>
   <li><span class="otpimized">Dry the walls of the tube with a
