Minor changes to Qiagen maxi protocol.

--- a/content/protocols/Qiagen-maxi.html
+++ b/content/protocols/Qiagen-maxi.html
@@ -57,9 +57,13 @@ for high copy number plasmid.</p>
   <li><span class="optimized">If a white precipitate (SDS) is visible in
     buffer P2, heat the bottle in an incubator or in water bath until it
     disappears</span>.</li>
-  <li>Seperate culture into two 50 mL Falcon tubes and centrifuge at 4000 rpm
-    for 10 minutes.</li>
-    at 4&deg;C.<br/>
+  <li>Seperate culture into <span class="optimized">two 50 mL Falcon
+    tubes</span>.
+    Label the tubes <span class="optimized">(not the caps)</span>
+    accordingly.</li>
+  <li>Centrifuge at <span class="optimized">4000 rpm for 10
+      minutes</span> at 4&deg;C
+    (the content will be slightly turbid).</li>
   <li>Resuspend the bacterial pellet with 10 mL buffer P1 containing RNase
     A and LyseBlue.</li>
   <li>Add 10 mL buffer P2, mix by inverting the tube until uniformly blue
@@ -78,16 +82,17 @@ for high copy number plasmid.</p>
   <li>Elute DNA with 15 mL buffer QF in a <span class="optimized">50 mL
     Falcon tube</span>.</li>
   <li>Precipitate DNA by adding 10.5 mL room-temperature isopropanol to
-    the eluate. Mix and centrifuge at <span class="optimized">4000 rpm
+    the eluate.</li>
+  <li>Mix and centrifuge at <span class="optimized">4000 rpm
     for 30 minutes at 4&deg;C</span>.</li>
   <li>Wash DNA pellet with 5 mL of room-temperature 70% ethanol, and
     centrifuge at <span class="optimized">4000 rpm
-    for 15 minuntes</span>.</li>
+    for 15 minutes</span> at 4 &deg;C.</li>
   <li>Spill the liquid. The pellet should form a visible white ring at
     the bottom of the tube.</li>
   <li><span class="otpimized">Dry the walls of the tube with a
     tissue</span>. Do not touch the pellet.</li>
-  <li>Dissolve the pellet in 100 &mu;L of ddH<sub>2</sub>O.</li>
+  <li>Dissolve the pellet in 100 &mu;L of water.</li>
 
 <br/>
 - version 1.0 -
