Added "Research lines" and "Work with us" sections.

--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -2,11 +2,11 @@
 {% block body %}
   <br/>
   <br/>
-  <h2>Welcome to the Genome Architecture Lab!</h2>
-  The site is still under construction. You can check out the blog,
-  and the research lines and the online journal club.
   <h2>Position available</h2>
   We have a PhD position. If you are interested to work with us, please
   contact <script>print_mail('Guillaume Filion')</script>.
   <div id="bottom_space"></div>
+{% endblock %}
+{% block section %}
+       <div id="section" title="#workwithus"></div>
 {% endblock %}
