--- a/content/base.html
+++ b/content/base.html
@@ -57,10 +57,10 @@
         <p>
           <a id="thelab" class="navigation_link big_link" href="http://lab.thegrandlocus.com/">the Lab</a><br/>
           <a id="theteam" class="navigation_link small_link" href="http://lab.thegrandlocus.com/">The team</a><br/>
-          <a id="researchlines" class="navigation_link small_link" href="http://lab.thegrandlocus.com/">Research lines</a><br/>
+          <a id="researchlines" class="navigation_link small_link" href="http://lab.thegrandlocus.com/research-lines.html">Research lines</a><br/>
           <a id="protocols" class="navigation_link small_link" href="http://lab.thegrandlocus.com/protocols/list.html">Protocols</a><br/>
           <a id="journalclub" class="navigation_link small_link" href="http://openjournalclub.thegrandlocus.com/">Journal Club</a><br/>
-          <a id="workwithus" class="navigation_link small_link" href="http://lab.thegrandlocus.com/">Work with us</a>
+          <a id="workwithus" class="navigation_link small_link" href="http://lab.thegrandlocus.com/work-with-us.html">Work with us</a>
         </p>
 
         <p>
