Added the team section and rotating cloud.

--- a/content/base.html
+++ b/content/base.html
@@ -56,7 +56,7 @@
       <div class="main_column" id="right_column">
         <p>
           <a id="thelab" class="navigation_link big_link" href="http://lab.thegrandlocus.com/">the Lab</a><br/>
-          <a id="theteam" class="navigation_link small_link" href="http://lab.thegrandlocus.com/">The team</a><br/>
+          <a id="theteam" class="navigation_link small_link" href="http://lab.thegrandlocus.com/team.html">The team</a><br/>
           <a id="researchlines" class="navigation_link small_link" href="http://lab.thegrandlocus.com/research-lines.html">Research lines</a><br/>
           <a id="protocols" class="navigation_link small_link" href="http://lab.thegrandlocus.com/protocols/list.html">Protocols</a><br/>
           <a id="journalclub" class="navigation_link small_link" href="http://openjournalclub.thegrandlocus.com/">Journal Club</a><br/>
