--- a/content/research-lines.html
+++ b/content/research-lines.html
@@ -1,7 +1,16 @@
 {% extends "lab.html" %}
 {% block body %}
-  <br/>
-  <br/>
+<br/>
+<br/>
+<p style="text-align:center">
+  <span style="font-size:48pt">&#8226;</span><br/>
+  <span style="font-size:24pt">Research Lines<br/></span>
+  <hr style="border:0px; color:black; background-color:black; width:70%; height:1px;"/>
+</p>
+
+<br/>
+<br/>
+
 <p>The 20th century has been the triumph of genetics. However, we fully understand a mere 3% of the human genome - that is, the coding genome. More challenging is to understand how this tiny fraction is orchestrated by the much larger <strong>regulatory genome</strong>. What does the regulatory genome consist of? How does it encode information? How is it organized and how does it evolve? Contrary to the coding genome, the information of the regulatory genome is <strong>context-dependent</strong>. For example, the same promoter can have different levels of activity, the same enhancers can activate one gene or another, depending on available transcription factors and on the local chromatin marks. So the DNA sequence is not enough to understand the function of regulatory sequences. Our research lines focus on the influence of the chromatin context on transcription; and on the co-evolution between the genome and its chromatin context.</p>
 
 <h2>Invasion landscapes</h2>
