Updated Olivera's profile and added an irrelevant code.

--- a/content/team.html
+++ b/content/team.html
@@ -37,7 +37,7 @@
   <tr>
     <td><img src="/static/img/HengChang_cropped.jpg"></td>
     <td class="person">
-    <h3>Heng-Chang Chen, techinician</h3>
+    <h3>Heng-Chang Chen, technician</h3>
     <p>Epigenetics, including CG methylation and histone
     modifications is one of the critical
     mechanisms involved in chromatin structure regulation and shaping.
@@ -62,7 +62,14 @@
     <td><img src="/static/img/Olivera_cropped.jpg"></td>
     <td class="person">
     <h3>Olivera Vujatovic, post-doc</h3>
-    ...
+It is very challenging working on recently available genome-wide data about
+chromatin proteins distribution and genome sequences in different species,
+including non-coding elements. They are giving great opportunities to
+understand better interplay between DNA and proteins that bind them, how
+they regulate transcription and an insight into evolutionary paths that shaped
+them. With the help of statistics one can process this big amount of the data
+and observe general concepts that might explain questions about genome
+functioning.
     </td>
   </tr>
   <table>
