--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -2,6 +2,14 @@
 {% block body %}
   <br/>
   <br/>
+<p style="text-align:center">
+  <span style="font-size:48pt">&#8226;</span><br/>
+  <span style="font-size:24pt">Work with us<br/></span>
+  <hr style="border:0px; color:black; background-color:black; width:70%; height:1px;"/>
+</p>
+  <br/>
+  <br/>
+
   <h2>Position available</h2>
   We have a PhD position. If you are interested to work with us, please
   contact <script>print_mail('Guillaume Filion')</script>.
