Added two protocols, cleaned the css of the tables.

--- a/content/protocols/Qiagen-maxi.html
+++ b/content/protocols/Qiagen-maxi.html
@@ -3,7 +3,11 @@
 <br/>
 <br/>
 <div class="hrecipe">
-<h2 class="fn">Modified Qiagen maxi-prep</h2>
+<h2 class="fn">Modified Qiagen maxi-prep [obsolete]</h2>
+
+<p class="obsolete">This protocol is no longer used. It is replaced
+by the protocol of Macherey-Nagel Xtra Midi Plus, which is much
+cheaper, faster and has a higher yield.</p>
 
 <p class="summary">Some parts of this protocol have been
 <span class="optimized">optimized</span> for speed and
