--- a/content/team.html
+++ b/content/team.html
@@ -13,7 +13,7 @@
 
 
   <div id="Guillaume">
-  <table>
+  <table class="colleague">
   <tr>
     <td><img src="/static/img/Guillaume_cropped.jpg"></td>
     <td class="person">
@@ -33,7 +33,7 @@
   </div>
 
   <div id="Heng-Chang">
-  <table>
+  <table class="colleague">
   <tr>
     <td><img src="/static/img/HengChang_cropped.jpg"></td>
     <td class="person">
@@ -46,7 +46,7 @@
     through DNA repair mechanisms. I am interested in understanding
     the connection between CG methylation and DNA repair mechanisms as
     well as their impacts on different chromatin environments through the
-    <a href="/research-lines.html">TRIP</a> technology.</p>
+    <a href="/research-lines.html">TRiP</a> technology.</p>
 
     <p>For more information about me, check my
     <a href="http://www.wix.com/chenhcinaki/dzdm#!home">personal web
@@ -57,7 +57,7 @@
   </div>
 
   <div id="Olivera">
-  <table>
+  <table class="colleague">
   <tr>
     <td><img src="/static/img/Olivera_cropped.jpg"></td>
     <td class="person">
