--- a/content/protocols/list.html
+++ b/content/protocols/list.html
@@ -16,11 +16,14 @@
 coli</i> heat-shock competent cells preparation</a></li>
   <li><a href="Ecoli-heat-shock-transformation.html"><i>E.
 coli</i> heat-shock transformation protocol</a></li>
-  <li><a href="Qiagen-maxi.html">Modified Qiagen maxi-prep protocol</a></li>
+  <li><a href="barcoding-pcr.html">Barcoding PCR protocol</a></li>
+  <li><a href="extract-DNA-kc-cells.html">Kc cells DNA extraction protocol</a></li>
+  <li><a href="Qiagen-maxi.html">Modified Qiagen maxi-prep protocol [obsolete]</a></li>
 </ul>
 <h2>Cell culture</h2>
 <ul>
   <li><a href="BPYE-medium.html">BPYE medium</a></li>
+  <li><a href="freeze-kc-cells.html">Kc cells freezing protocol</a></li>
 </ul>
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
