Updated product refs in protocols and minor changes to PhD call.

--- a/content/protocols/BPYE-medium.html
+++ b/content/protocols/BPYE-medium.html
@@ -6,14 +6,17 @@
 <h2 class="fn">BPYE medium</h2>
 
 <p class="summary">BPYE is used for culture of <i>Drosophila</i>
-Kc167 cells.</p>
+Kc167 cells.<br/>
+<b>NOTE:</b> We have observed that the line we culture in our lab
+(obtained from the van Steensel lab) does not grow in Schneider
+medium.</p>
 
 <h3>Material (for <span class="yield">5 L medium</span>):</h3>
 <ul>
   <li class="ingredient">
     <span class="value">196.8</span>
     <span class="type">g</span> Shields and Sang M3 powder
-    (<span class="company">Sigma</span>
+    (<span class="company">Sigma</span>, REF:
     <span class="product_reference">S8398-5L</span>)
   </li>
 
