--- a/content/protocols/Qiagen-maxi.html
+++ b/content/protocols/Qiagen-maxi.html
@@ -24,7 +24,7 @@ for high copy number plasmid.</p>
     <span class="type">mL</span> bacterial culture
   </li>
   <li class="ingredient">
-    <span class="company">Qiagen</span> Plasmid Maxi kit (Cat. No. 
+    <span class="company">Qiagen</span> Plasmid Maxi kit (REF: 
     <span class="product_reference">12163</span>)
   </li>
   <li class="ingredient">
