--- a/content/protocols/barcoding-pcr.html
+++ b/content/protocols/barcoding-pcr.html
@@ -12,15 +12,15 @@ See the comments below for complements.</p>
 <h3>Material:</h3>
 <ul>
   <li class="ingredient">Phusion polymerase
-    (<span class="company">New England Biolabs</span>
+    (<span class="company">New England Biolabs</span>, REF:
     <span class="product_reference">M0530S</span>)
   </li>
   <li class="ingredient">T4 DNA polymerase
-    (<span class="company">New England Biolabs</span>
+    (<span class="company">New England Biolabs</span>, REF:
     <span class="product_reference">M0203S</span>)
   </li>
   <li class="ingredient">Concentrated T4 DNA ligase
-    (<span class="company">New England Biolabs</span>
+    (<span class="company">New England Biolabs</span>, REF:
     <span class="product_reference">M0202M</span>)
   </li>
   <li class="ingredient">500 mM EDTA
