--- a/content/protocols/freeze-kc-cells.html
+++ b/content/protocols/freeze-kc-cells.html
@@ -13,7 +13,9 @@ Kc167 cells for long term storage.</p>
   <li class="ingredient"><a href="/protocols/BPYE-medium.html">BPYE
     medium</a> containing 10&#37; FBS</li>
   <li class="ingredient">DMSO</li>
-  <li class="ingredient">Cryotubes</li>
+  <li class="ingredient">Cryotubes
+      (<span class="company">Thermo Scientific NUNC</span>, REF:
+      <span class="product_reference">363401</span>)</li>
   <li class="ingredient">Ice-filled box</li>
 </ul>
 
