Corrected two typos.

--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -31,9 +31,9 @@
   Because we like to share. We like to share our knowledge, and we like to share our enthusiasm about research. And actually, we consider this is our job.
 
   <h3>The project</h3>
-  <p>The heart of the project is to understand what makes genes silent <i>in vivo</i>. Recent work has focused on gene activation, but surprisingly little is known about how genes are silenced in normal conditions. Our work suggests that the bulk of silencig in <i>Drosophila</i> does not require transcription repressors, nor repressive histone marks.</p>
+  <p>The heart of the project is to understand what makes genes silent <i>in vivo</i>. Recent work has focused on gene activation, but surprisingly little is known about how genes are silenced in normal conditions. Our work suggests that the bulk of silencing in <i>Drosophila</i> does not require transcription repressors, nor repressive histone marks.</p>
 
-  <p>To further study this suprising observation, we are developing the TRiP (Thousands of Reporters in Parallel) technology. The essence of TRiP is to integrate a gene at thousands of different locations in a genome and study its transcription in the new context. In combination with publicly available datasets, this allows to answer the following questions:
+  <p>To further study this surprising observation, we are developing the TRiP (Thousands of Reporters in Parallel) technology. The essence of TRiP is to integrate a gene at thousands of different locations in a genome and study its transcription in the new context. In combination with publicly available datasets, this allows to answer the following questions:
   <ol>
     <li>Does the sequence of a gene determine its expression in every chromatin environment?</li>
     <li>Does the local chromatin environment have a predictable effect on the expression of the gene?</li>
