Added contact page and better highlighting for protocols.

--- a/content/protocols/BPYE-medium.html
+++ b/content/protocols/BPYE-medium.html
@@ -76,7 +76,8 @@ medium.</p>
 </div>
 
 <br/>
-- version 0.5 -
+- version <span calss="version">0.5</span>,
+<abbr calss="pudate" title="2012-03-17">March 17 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
