--- a/content/protocols/Ecoli-heat-shock-competent-cells-preparation.html
+++ b/content/protocols/Ecoli-heat-shock-competent-cells-preparation.html
@@ -40,7 +40,9 @@
 <li>Pipet 50 &mu;L of cell suspension into -80&deg;C frozen eppendorfs and directly transfer them to -80&deg;C freezer.</li>
 </ol>
 
-<span id="version">- version 0.5 -</span>
+<br/>
+- version <span calss="version">0.5</span>,
+<abbr calss="pudate" title="2012-03-24">March 24 2012</abbr> -
 </div><!-- end hrecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
