--- a/content/protocols/Ecoli-heat-shock-transformation.html
+++ b/content/protocols/Ecoli-heat-shock-transformation.html
@@ -31,7 +31,9 @@
   <li>Keep LB plates at 37&deg;C and pick colonies after more than 12 hours incubation.</li>
 </ol>
 
-<span id="version">- version 0.5 -</span>
+<br/>
+- version <span calss="version">0.5</span>,
+<abbr calss="pudate" title="2012-02-21">February 21 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
