--- a/content/protocols/Qiagen-maxi.html
+++ b/content/protocols/Qiagen-maxi.html
@@ -99,7 +99,8 @@ for high copy number plasmid.</p>
   <li>Dissolve the pellet in 100 &mu;L of water.</li>
 
 <br/>
-- version 1.0 -
+- version <span calss="version">1.0</span>,
+<abbr calss="pudate" title="2012-04-02">April 2 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
