--- a/content/protocols/barcoding-pcr.html
+++ b/content/protocols/barcoding-pcr.html
@@ -103,7 +103,10 @@ primers are barcoded all the PCR products are forked.</p>
 a double-stranded barcode. This makes the PCR product fully
 double-stranded, so that it can be ligated.</p>
 </div>
-<span id="version">- version 0.6 -</span>
+
+<br/>
+- version <span calss="version">1.0</span>,
+<abbr calss="pudate" title="2012-06-20">June 20 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
