--- a/content/protocols/freeze-kc-cells.html
+++ b/content/protocols/freeze-kc-cells.html
@@ -35,7 +35,8 @@ Kc167 cells for long term storage.</p>
 </div>
 
 <br/>
-- version 0.5 -
+- version <span calss="version">0.5</span>,
+<abbr calss="pudate" title="2012-06-23">June 23 2012</abbr> -
 </div><!-- end hRecipe -->
 {% endblock %}
 {% block section %}<div id="section" title="#protocols"></div>{% endblock %}
