--- a/content/protocols/list.html
+++ b/content/protocols/list.html
@@ -2,7 +2,7 @@
 {% block body %}
 <br/>
 <br/>
-<p style="text-align:center">
+<p class="bf_separator">
   <span style="font-size:48pt">&#8226;</span><br/>
   <span style="font-size:24pt">Protocols<br/></span>
   <hr style="border:0px; color:black; background-color:black; width:70%; height:1px;"/>
@@ -10,6 +10,23 @@
 
 <br/>
 <br/>
+
+<p>Here are the protocols used in the lab. The key steps that have been
+optimized are <span class="optimized">highlighted</span> in the text.
+These steps can be further optimized, but we recommend following them
+as indicated. Wherever applicable, we indicate the reason these steps
+are considered crucial.</p>
+
+<p>To keep a record of how protocols are used over time, we give every
+protocol a version number. A protocol taken
+from another source (in which nothing has been otpimized) is given a
+version number 0.5. If the protocol includes optimized steps, its
+version is set to 1.0. Every modification of the protocol after its
+publication on the website increases the version number by 0.1. Links
+to previous versions of the protocol (if there is any) are indicated
+next to the version.
+</p>
+
 <h2>Molecular biology</h2>
 <ul>
   <li><a href="Ecoli-heat-shock-competent-cells-preparation.html"><i>E.
