--- a/content/team.html
+++ b/content/team.html
@@ -2,7 +2,7 @@
 {% block body %}
 <br/>
 <br/>
-<p style="text-align:center">
+<p class="bf_separator">
   <span style="font-size:48pt">&#8226;</span><br/>
   <span style="font-size:24pt">The Team<br/></span>
   <hr style="border:0px; color:black; background-color:black; width:70%; height:1px;"/>
