Minor display changes for small screens.

--- a/content/contact-us.html
+++ b/content/contact-us.html
@@ -29,7 +29,7 @@
 
   <style>
     #map_canvas {
-      float:right;
+      float:left;
       border:3px ridge #f00;
       margin:auto;
       width:60%;
@@ -63,8 +63,7 @@
   <br/>
 
   <!-- The Google map -->
-  <div id="map_canvas"></div>
-  <div id="address" style="float:left;">
+  <div id="address" style="float:left; margin-right:2em;">
   <hr/>
   Genome Architecture Team<br/>
   Centre of Genomic Regulation (CRG)<br/>
@@ -74,6 +73,7 @@
   Spain<br/>
   <hr/>
   </div>
+  <div id="map_canvas"></div>
 
   
 {% endblock %}
