Closed PhD call, changed Vacancies to work with us.

--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -23,7 +23,7 @@
   <br/>
   <br/>
 
-  <h2>PhD position available</h2>
+  <h2>IMPORTANT<br/>the call below is closed from 30 July 2012</h2>
   <h3>Why work with us?</h3>
   Because we are situated on the beach, in Barcelona.
 
