Added meta robots noarchive tag to work with us.

--- a/content/work-with-us.html
+++ b/content/work-with-us.html
@@ -1,6 +1,7 @@
 {% extends "lab.html" %}
 
 {% block description %}
+    <meta name="robots" content="noarchive">
     <meta name="description"
         content="PhD position available at the Filion lab - bioinformatics & molecular biology laboratory at the CRG in Barcelona" />
 {% endblock %}
